# easy-rag

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  api_server.py  app.py  chat.py  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt
data/knowledge/: sample_rag_intro.md
docs/: API.md  EVAL.md
docs/postman/: Easy_RAG_API.postman_collection.json  Easy_RAG_API.postman_environment.json
scripts/: eval_rag_api.py  generate_homework_sop_cases.py  start_api.ps1  start_api.sh  start_web.ps1  start_web.sh
src/easy_rag/: __init__.py  config.py  eval_runner.py  knowledge_bases.py  logger_config.py  rag_engine.py  timing_utils.py
src/easy_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/easy_rag/api/: __init__.py  auth.py  server.py
src/easy_rag/cli/: __init__.py  chat.py  ingest.py
src/easy_rag/templates/: _form_fields.html  _styles.html  api_docs.html  home.html  index.html  model.html  mysql.html  preview.html  rag.html
src/easy_rag/web/: __init__.py  app.py
tests/: conftest.py  test_api_server.py  test_app.py  test_config.py  test_knowledge_bases.py  test_rag_engine.py  test_timing_utils.py
